[WLP-08] - Add `new_message_arrived_webhook` webhook
Added:
- API Schema
- Documentation

Updated:
- DB Table
