# src/schemas/user.js
@@ -8,6 +8,26 @@ module.exports = schema({
   liveperson_secret: { type: String, required: false },
   liveperson_accesstoken: { type: String, required: false },
   liveperson_accesstokensecret: { type: String, required: false },
-  new_conversation_webhook: { type: String, required: false },
+  webhooks: {
+    type: Object,
+    required: false,
+    additionalProperties: false,
+    properties: {
+      new_file_in_conversation_webhook: {
+        type: String,
+        required: false,
+      },
+      new_conversation_webhook: {
+        type: String,
+        required: false,
+      },
+      new_message_arrived_webhook: {
+        type: String,
+        required: false,
+      },
+    },
+  },
   new_file_in_conversation_webhook: { type: String, required: false },
+  new_conversation_webhook: { type: String, required: false },
+  new_message_arrived_webhook: { type: String, required: false },
 });
